--- a/past.html
+++ b/past.html
@@ -67,7 +67,7 @@
         <p>This event was co-presented by Disability Culture at U-M and the Office for Diversity, Equity, and Inclusion. Our generous cosponsors included the UM Initiative on Disability Studies, Voices of the Staff, and the Council for Disability Concerns.</p>
       </div>
       <div class="inclusion-video">
-        <iframe src="https://www.youtube.com/embed/EMzWsg59tTY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/EMzWsg59tTY" title="Disability Inclusion Panel Video" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="inclusion text-block">
         <h2>Disability Inclusion Panel: Making U-M Events More Welcoming & Accessible</h2>
